--- a/main.html
+++ b/main.html
@@ -3,12 +3,112 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+
+<style>
+
+*{
+
+  padding:0px;
+
+  margin:0px;
+
+}
+
+body{
+
+  background-color:#f8f8f8;
+
+  text-align:center;
+
+	width:50%; 
+
+	
+
+}
+
+.book-library{
+
+  margin: 10px;
+
+  background-color:#ffffff;
+
+	
+
+}
+
+.book{
+
+ padding:20px;
+
+  background-color: #F1F1F1; 
+
+}
+
+  div{
+
+	  margin-bottom: 10px; 
+
+	 
+
+  }
+.author{
+
+  text-align:left;
+
+  font-size:6px;
+
+	color:#777777;
+
+}
+
+.text{
+
+  text-align:left;
+
+  font-weight: bold;
+
+  font-size:7px
+
+}
+
+h1{
+
+	 background-color: #f0f0f0; 
+
+  font-size:9px;
+
+	padding:5px
+
+}
+
+.price{
+
+  width: 95%;
+
+  background-color: #2ecc71;
+
+  color: white;
+
+  padding: 5px 10px; 
+
+  display: inline-block;
+
+  font-size: 5px;
+
+  margin: 4px 2px;
+
+  cursor: pointer;
+
+}
+</style>
+
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js"></script>
+
+<library class=“book-library”>
+
+<div> 
 
 	<h1>Book Library</h1> 
 
@@ -49,5 +149,8 @@
   <div class="price">RS 299</div>
 
 </div>
+</library>
+
 </body>
+
 </html>
